--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,12 @@
 {
     "manifest_version": 3,
-    "version": "1.0",
-    "name": "Pinly",
+    "version": "1.1",
+    "name": "Pinly Bookmark",
     "action": {
         "default_popup": "index.html",
         "default_icon": "icon.png"
-    }
+    },
+    "permissions": [
+        "tabs"
+    ]
 }
